# ardrone

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.4daa047  Makefile.am  README  README.md  TODO  ardrone.kdev4  ardroneConfig.cmake.in  ardroneConfigVersion.cmake.in  autogen.sh  config.h.cmake.in  config.h.in.cmake  configure.ac
.kdev4/: ardrone.kdev4
doc/: ports.txt
include/: Makefile.am
ko/: Makefile.am  Makefile.common  Makefile.kernel
m4/: Makefile.am  ac-path-kernel-source.m4
modules/: ACENetwork  Makefile.am  libACEStream
po/: Makefile.am  Makevars  POTFILES.in
scripts/: Makefile.am  (+8 more)
src/: CMakeLists.txt  Makefile.am  ardrone.cpp  ardrone_callbacks.cpp  ardrone_callbacks.h  ardrone_common.cpp  ardrone_common.h  ardrone_configuration.h  ardrone_control_scanner.cpp  ardrone_control_scanner.h  ardrone_defines.h  ardrone_eventhandler.cpp  ardrone_eventhandler.h  ardrone_macros.h  ardrone_mavlink_scanner.cpp  ardrone_mavlink_scanner.h  ardrone_message.h  ardrone_module_control_decoder.cpp  ardrone_module_control_decoder.h  ardrone_module_control_decoder.inl  ardrone_module_controller.cpp  ardrone_module_controller.h  ardrone_module_controller.inl  ardrone_module_eventhandler.cpp  ardrone_module_eventhandler.h  ardrone_module_eventhandler.inl  ardrone_module_mavlink_decoder.cpp  ardrone_module_mavlink_decoder.h  ardrone_module_mavlink_decoder.inl  ardrone_module_mediafoundation.h  ardrone_module_navdata_decoder.cpp  ardrone_module_navdata_decoder.h  ardrone_module_navdata_decoder.inl  ardrone_module_pave_decoder.cpp  ardrone_module_pave_decoder.h  ardrone_module_pave_decoder.inl  ardrone_modules_common.h  ardrone_navdata_scanner.cpp  ardrone_navdata_scanner.h  ardrone_network.h  (+21 more)
src/etc/: ardrone.fbp  ardrone.glade  ardrone.gtk2  ardrone.gtk3  ardrone.xrc  settings.ini
src/include/: ardrone_config.h
src/scripts/: control_scanner.l  mavlink_scanner.l  navdata_scanner.l  scanner.sh
src/test_i/: CMakeLists.txt  ardrone.cpp  ardrone_callbacks.cpp  ardrone_callbacks.h  ardrone_common.cpp  ardrone_common.h  ardrone_configuration.h  ardrone_control_scanner.cpp  ardrone_control_scanner.h  ardrone_defines.h  ardrone_eventhandler.cpp  ardrone_eventhandler.h  ardrone_mavlink_scanner.cpp  ardrone_mavlink_scanner.h  ardrone_message.cpp  ardrone_message.h  ardrone_module_control_decoder.h  ardrone_module_control_decoder.inl  ardrone_module_controller.cpp  ardrone_module_controller.h  ardrone_module_controller.inl  ardrone_module_eventhandler.cpp  ardrone_module_eventhandler.h  ardrone_module_eventhandler.inl  ardrone_module_mavlink_decoder.cpp  ardrone_module_mavlink_decoder.h  ardrone_module_mavlink_decoder.inl  ardrone_module_mediafoundation.cpp  ardrone_module_mediafoundation.h  ardrone_module_navdata_decoder.cpp  ardrone_module_navdata_decoder.h  ardrone_module_navdata_decoder.inl  ardrone_module_pave_decoder.cpp  ardrone_module_pave_decoder.h  ardrone_module_pave_decoder.inl  ardrone_modules_common.h  ardrone_navdata_scanner.cpp  ardrone_navdata_scanner.h  ardrone_network.h  ardrone_opengl.cpp  (+13 more)
src/test_i/etc/: ardrone.3ds  ardrone.glade  settings.ini
src/test_i/scripts/: control_scanner.l  lex.backup  mavlink_scanner.l  navdata_scanner.l  scanner.bat  scanner.sh  scanner_report.txt
test_i/ardrone_ui/: CMakeLists.txt  ardrone.cpp  ardrone_callbacks.cpp  ardrone_callbacks.h  ardrone_common.cpp  ardrone_common.h  ardrone_configuration.h  ardrone_eventhandler.cpp  ardrone_eventhandler.h  ardrone_message.cpp  ardrone_message.h  ardrone_module_eventhandler.cpp  ardrone_module_eventhandler.h  ardrone_module_eventhandler.inl  ardrone_module_mediafoundation.cpp  ardrone_module_mediafoundation.h  ardrone_module_mediafoundation.inl  ardrone_modules_common.h  ardrone_network.h  ardrone_network_common.h  ardrone_opengl.cpp  ardrone_opengl.h  ardrone_sessionmessage.cpp  ardrone_sessionmessage.h  ardrone_signalhandler.cpp  ardrone_signalhandler.h  ardrone_signalhandler.inl  ardrone_stream.cpp  ardrone_stream.h  ardrone_stream.inl  ardrone_stream_common.h  ardrone_ui.cpp  ardrone_ui.inl  ardrone_ui_base.h  stdafx.h
test_i/ardrone_ui/etc/: ardrone.fbp  ardrone.xrc  ardrone_ui.frag  ardrone_ui.gtk3  ardrone_ui.vert  settings.ini
test_u/: CMakeLists.txt
test_u/mavlink_ui/: CMakeLists.txt  stdafx.h  test_u.cpp  test_u_common.h  test_u_common_modules.h  test_u_defines.h  test_u_eventhandler.cpp  test_u_eventhandler.h  test_u_eventhandler.inl  test_u_gtk_callbacks.cpp  test_u_gtk_callbacks.h  test_u_message.cpp  test_u_message.h  test_u_message.inl  test_u_net_modules.h  test_u_network.h  test_u_network_common.h  test_u_session_message.cpp  test_u_session_message.h  test_u_session_message.inl  test_u_stream.cpp  test_u_stream.h  test_u_stream_common.h
test_u/mavlink_ui/etc/: mavlink_ui.gtk2
test_u/navdata_ui/: CMakeLists.txt  test_u.cpp  test_u_common.h  test_u_common_modules.h  test_u_defines.h  test_u_eventhandler.h  test_u_eventhandler.inl  test_u_gtk_callbacks.cpp  test_u_gtk_callbacks.h  test_u_message.cpp  test_u_message.h  test_u_message.inl  test_u_net_modules.h  test_u_network.h  test_u_network_common.h  test_u_session_message.cpp  test_u_session_message.h  test_u_session_message.inl  test_u_stream.cpp  test_u_stream.h  test_u_stream_common.h
test_u/navdata_ui/etc/: navdata_ui.gtk2  navdata_ui.gtk3
test_u/video_ui/: CMakeLists.txt  stdafx.h  test_u_video_ui.cpp  test_u_video_ui_common.h  test_u_video_ui_common_modules.h  test_u_video_ui_defines.h  test_u_video_ui_eventhandler.cpp  test_u_video_ui_eventhandler.h  test_u_video_ui_eventhandler.inl  test_u_video_ui_message.cpp  test_u_video_ui_message.h  test_u_video_ui_message.inl  test_u_video_ui_net_modules.h  test_u_video_ui_network.h  test_u_video_ui_network_common.h  test_u_video_ui_session_message.cpp  test_u_video_ui_session_message.h  test_u_video_ui_session_message.inl  test_u_video_ui_signalhandler.cpp  test_u_video_ui_signalhandler.h  test_u_video_ui_signalhandler.inl  test_u_video_ui_stream.cpp  test_u_video_ui_stream.h  test_u_video_ui_stream_common.h
test_u/video_ui/etc/: Makefile.am
(+17 files in other folders)
